<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1"
    android:background="#333"
    >


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top1"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top2"
        android:src="@mipmap/logoeata"
        android:contentDescription="@string/logo_img"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guideline_top2"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top3">

        <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:text="@string/ad_text"
            android:textAlignment="center"
            android:textColor="#FFF"
             />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btRadio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#333"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintTop_toTopOf="@id/guideline_top3"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top4"
        app:layout_constraintLeft_toLeftOf="@id/guideline_ver1"
        app:layout_constraintRight_toRightOf="@id/guideline_ver2"
        android:contentDescription="@string/play_button"/>

    <Button
        android:id="@+id/btCerrarSesion"
        android:background="@color/colorPrimary"
        android:text="@string/logout_text"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top5"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top6"
        app:layout_constraintLeft_toLeftOf="@id/guideline_ver3"
        app:layout_constraintRight_toRightOf="@id/guideline_ver4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".30"
        />
    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_top3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".37"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".55"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".90"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".66"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85"
        />

</androidx.constraintlayout.widget.ConstraintLayout>